--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,25 +19,32 @@ h1,h2 {
   }
 }
 
-.top-hero-wrapper {
-  width: 100vw;
+.form-control {
+  height: 45px;
+}
+
+.users-new-wrapper {
+  wihth: 100vw;
   height: 100vh;
-  background-image: url('bg-top.png');
-  background-position: center;
+  background-image: image-url('bg-top.png');
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
+  
+  users-new-container {
+    padding-top: 220px;
+    
+    .form-group {
+      margin-bottom: 20px;
+    }
+  }
 }
 
-.top-hero-container {
-  padding-top: 220px;
-  h1 {
-    font-size: 56px;
-    margin-bottom: 20px;
-  }
-  
-  h2 {
-    margin-bottom: 60px;
-  }
+.alert {
+  margin-bottom: 0px;
+  position: fixed;
+  width: 100%;
+  z-index: 10000;
 }
