--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,15 @@
   </head>
 
   <body>
-    Aです
+    <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>"role="alert"><%= value %></div>
+    <% end %>
+    
     <%= yield %>
-    Bです
+    <script>
+      $(function(){
+        $(".alert").fadeOut(5000);
+      });
+    </script>
   </body>
 </html>
