--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -49,7 +49,7 @@ h1,h2 {
   z-index: 10000;
 }
 
-.nabar-transparent {
+.navbar-transparent {
   margin-bottom: 0px;
   background-color: rgba(0,0,0,0.5);
   a {
@@ -63,5 +63,55 @@ h1,h2 {
   
   img {
     height: 40px;
+  }
+}
+
+.btn-black {
+  color: #565656;
+  border: 1px solid #565656;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 20px;
+  background-color: rgba(0,0,0,0.0);
+  
+  &:hover {
+    color: #565656;
+  }
+}
+
+.topic-new-wrapper {
+  padding-top: 120px;
+}
+
+.topic-index-wrapper {
+  padding-top: 70px;
+  background-color: #fafafa;
+  .topic-index-single {
+    background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 30px;
+    border: 1px solid #e6ecf0;
+    border-radius:3px;
+    .topic-author {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    
+    .topic-text {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    img {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+    
+    .topic-index-icon {
+      width: 35px;
+      height: 30px;
+      margin-left: 20px;
+    }
   }
 }
