--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,6 +17,7 @@
          <div class="form-group">
             <%= f.label :password, class:'text-white' %>
             <%= f.password_field :password, class: 'form-control' %>
+            <%= f.label '※英数字8文字以上', class: 'text-white' %>
          </div>
          <div class="form-group">
             <%= f.label :password_confirmation, class: 'text-white' %>
