--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,7 +26,7 @@ h1,h2 {
 .users-new-wrapper {
   wihth: 100vw;
   height: 100vh;
-  background-image: image-url('bg-top.png');
+  background-image: url('bg-top.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
